update html and css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button onclick="add3ToHome()">+3</button>
       </div>
       <div>
-        <h3>AWAY</h3>
+        <h3>GUEST</h3>
         <p id="score-guest" class="score-number">0</p>
         <button onclick="add1ToGuest()">+1</button>
         <button onclick="add2ToGuest()">+2</button>
